--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Print_f C)
 
 set(CMAKE_C_STANDARD 11)
 
-include_directories(.)
+include_directories(Libft)
 
 add_executable(Print_f
-        printf.h ft_printf.c)
+        printf.h ft_printf.c Libft/ft_putchar.c Libft/ft_putnbr.c)
