--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_C_STANDARD 11)
 include_directories(Libft)
 
 add_executable(Print_f
-        printf.h ft_printf.c Libft/ft_putchar.c Libft/ft_putnbr.c print_d.c)
+        printf.h ft_printf.c Libft/ft_putchar.c Libft/ft_putnbr.c print_di.c print_u.c)
