--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -28,23 +28,10 @@ SRC = 	ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
 		ft_strnequ.c ft_strnew.c ft_strnstr.c ft_strrchr.c ft_strsplit.c \
 		ft_strstr.c ft_strsub.c ft_strtrim.c ft_tolower.c ft_toupper.c \
 		ft_isspace.c ft_strlowcase.c ft_strupcase.c \
-		ft_swap.c ft_strlcpy.c ft_swapstr.c ft_root.c ft_strrev.c
+		ft_swap.c ft_strlcpy.c ft_swapstr.c ft_root.c ft_strrev.c \
+		ft_putchars.c
 
-OBJ = 	ft_atoi.o ft_bzero.o ft_isalnum.o ft_isalpha.o ft_isascii.o \
-		ft_isdigit.o ft_isprint.o \
-		ft_isspace.o ft_itoa.o ft_lstadd.o \
-		ft_lstdel.o ft_lstdelone.o ft_lstiter.o ft_lstmap.o ft_lstnew.o \
-		ft_memalloc.o ft_memccpy.o ft_memchr.o ft_memcmp.o ft_memcpy.o \
-		ft_memdel.o ft_memmove.o ft_memset.o ft_putchar.o ft_putchar_fd.o \
-		ft_putendl.o ft_putendl_fd.o ft_putnbr.o ft_putnbr_fd.o ft_putstr.o \
-		ft_putstr_fd.o ft_strcat.o ft_strchr.o ft_strclr.o ft_strcmp.o \
-		ft_strcpy.o ft_strdel.o ft_strdup.o ft_strequ.o ft_striter.o \
-		ft_striteri.o ft_strjoin.o ft_strlcat.o ft_strlen.o \
-		ft_strmap.o ft_strmapi.o ft_strncat.o ft_strncmp.o ft_strncpy.o \
-		ft_strnequ.o ft_strnew.o ft_strnstr.o ft_strrchr.o ft_strsplit.o \
-		ft_strstr.o ft_strsub.o ft_strtrim.o ft_tolower.o ft_toupper.o \
-		ft_strlowcase.o ft_strupcase.o \
-        ft_swap.o ft_strlcpy.o ft_swapstr.o ft_root.o ft_strrev.o
+OBJ = 	$(SRC:.c=.o)
 
 all: $(NAME)
 
